# Commonsense-aware-Humor-Recognition-with-PMLM

./: .gitignore  LICENSE  README.md  create_cache.py  setup.cfg  test.py  train.py
comet_commonsense/scripts/data/: make_conceptnet_data_loader.py
comet_commonsense/scripts/interactive/: conceptnet_single_example.py
comet_commonsense/src/data/: atomic.py  conceptnet.py  data.py
comet_commonsense/src/evaluate/: evaluate.py  generate.py  sampler.py
comet_commonsense/src/interactive/: functions.py
comet_commonsense/src/models/: models.py
comet_commonsense/src/train/: conceptnet_train.py  train.py
models/: __init__.py  lightning_model.py  lm_base.py
src/: __init__.py
src/comet_commonsense/scripts/data/: make_atomic_data_loader.py
src/comet_commonsense/scripts/evaluate/: bleu_atomic.py  evaluate_atomic_generation_model.py
src/comet_commonsense/scripts/generate/: generate_atomic_beam_search.py  generate_atomic_greedy.py  generate_atomic_topk.py  generate_conceptnet_beam_search.py
src/comet_commonsense/scripts/interactive/: atomic_single_example.py  conceptnet_evaluate_single_example.py
src/comet_commonsense/scripts/novelty/: compute_conceptnet_novelty.py
src/comet_commonsense/src/: main_atomic.py  main_conceptnet.py
src/comet_commonsense/utils/: utils.py
src/data/: extract_keywords.py  process_semeval2020.py
src/models/: keyword_base.py  lightning_model.py
src/utils/: __init__.py  comet.py  config.py  scheduler.py
src/visualization/: interactive.py  visualize.py
utils/: comet.py  dataloader.py  load_dataset.py
(+7 files in other folders)
