[metadata]
name = kw_com_humor
version = attr: src.__version__
url = https://github.com/zhanglab-iu/Commonsense-aware-Humor-Recognition-with-PMLM
author = Yuta SASAKI
author_email = yuta.20010306@gmail.com
license_files = LICENSE
description = Conceptual commonsense-aware attentitive modeling with pre-trained masked language models for humor recognition
long_description = file: README.md

[options]
python_requires = >=3.8
packages = find:
install_requires =
    ftfy
    imblearn
    joblib
    nltk
    pandas == 1.3.5
    protobuf <= 4.0.0rc2
    pytorch-lightning == 1.7.5
    scikit-learn == 1.1.1
    seaborn
    spacy
    torch >= 2.0.1
    torchdata
    torchtext
    torchvision
    torchmetrics >= 0.8.2
    tqdm
    transformers
    typing_extensions
    yake
    en-core-web-sm
    wandb >= 0.12.17
    python-dotenv
    hydra-core >= 1.2.0
    einops
    sentencepiece >= 0.1.97